--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-image: url('https://images.unsplash.com/photo-1519501025264-65ba15a82390?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80');
-  font-family: 'helvetica neue';
+  font-family: 'Alata', sans-serif;
   font-size: 20px;
   font-weight: 200;
 }
@@ -17,7 +17,7 @@ input {
 
 .search-form {
   max-width: 400px;
-  margin: 50px auto;
+  margin: 70px auto;
 }
 
 input.search {
@@ -25,13 +25,13 @@ input.search {
   text-align: center;
   outline: 0;
   border: 10px solid #F7F7F7;
-  width: 120%;
-  left: -10%;
+  width: 100%;
+  left: 0%;
   position: relative;
   top: 10px;
   z-index: 2;
   border-radius: 5px;
-  font-size: 40px;
+  font-size: 30px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
 }
 
@@ -55,14 +55,8 @@ input.search {
   text-transform: capitalize;
 }
 
-.suggestions li:nth-child(even) {
-  transform: perspective(100px) rotateX(3deg) translateY(2px) scale(1.001);
-  background: linear-gradient(to bottom,  #ffffff 0%,#EFEFEF 100%);
-}
-
-.suggestions li:nth-child(odd) {
-  transform: perspective(100px) rotateX(-3deg) translateY(3px);
-  background: linear-gradient(to top,  #ffffff 0%,#EFEFEF 100%);
+span.name {
+  font-size: 20px;
 }
 
 span.population {
